adding body and footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,5 +14,16 @@
 
     <body>
         <img src="/assets/img/comic.jpg" id="comic">
+
+        {{{ body }}}
+
+        <footer class="burgerFooter">
+            <div class="footer-copyright">
+                <div class="container">
+                    <span class="grey-text text-lighten-4">© 2019 mavstronaut</span>
+                    <a class="grey-text text-lighten-4 right" href="https://saymeta.com">Portfolio</a>"
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
