--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,6 +14,18 @@
                     {{/unless}}
                 {{/each}}
             </div> 
+
+            <div class="col s6">
+                {{#each burgers}}
+                    {{#if this.devoured}}
+                        <div class="burgerEaten">
+                            <div>
+                                {{this.burger_name}}
+                            </div>
+                        </div>
+                    {{/if}}
+                {{/each}}
+            </div>
         </div>
     </div>
 </main>
