--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,15 @@
-<h1>Order Up</h1>
+<h1>Send Order</h1>
+
+<div class="row">
+    <div class="col s12">
+        <form action="/burgers" method="POST">
+            <input type="text" id="name" name="burger_name" placeholder="Order What You Want">
+            <button type="submit" class="addBurgerButton">Prepare Meal</button>
+        </form>
+    </div>
+</div>
+
+<h2>Order Up</h2>
 
 <main>
     <div class="container">
