minor fixes of extra characters

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
             <div class="footer-copyright">
                 <div class="container">
                     <span class="grey-text text-lighten-4">© 2019 mavstronaut</span>
-                    <a class="grey-text text-lighten-4 right" href="https://saymeta.com">Portfolio</a>"
+                    <a class="grey-text text-lighten-4 right" href="https://saymeta.com">Portfolio</a>
                 </div>
             </div>
         </footer>
